# AppliedMachineLearning

./: mlflow.db  pyproject.toml
Assignment_1/: prepare.ipynb  train.ipynb
Assignment_2/: prepare.ipynb  train.ipynb
Assignment_3/: app.py  coverage.txt  score.py  test.py  test_score.py
Assignment_4/: Dockerfile  app.py  coverage.txt  pre-commit  requirements.txt  test.py
Assignment_5/: Duck_VS_Chicken_CNN.ipynb  Sentiment_Analysis_BERT.ipynb
assignment-1-sms-spam/: prepare.ipynb  train.ipynb
data/: .gitignore  raw_data.csv.dvc  test.csv  test.csv.dvc  train.csv  train.csv.dvc  validation.csv  validation.csv.dvc
mlartifacts/1/10a858550c6b41f89f43d9565031761f/artifacts/: classification_report.txt  confusion_matrix.txt  estimator.html
mlartifacts/1/123bc9b57f8046af9062e1a73ca42839/artifacts/: classification_report.txt  confusion_matrix.txt  estimator.html
mlartifacts/1/f63e58ad988946ff82137134c4467563/artifacts/: classification_report.txt  confusion_matrix.txt  estimator.html
mlartifacts/1/models/m-19c5f09dd9874ec58db46973511c13ba/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-3a03db28cd1b43afb8846c6688b239cf/artifacts/: MLmodel
mlartifacts/1/models/m-84e26136451b419d8a7c30ce9d13db86/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-b356737e959640d5a921d944018be4e5/artifacts/: MLmodel  conda.yaml  model.pkl
mlartifacts/1/models/m-d0417b829bfb4e8aab83e3b989071660/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-d96d3911cb384cbe9442472966d5f0cc/artifacts/: MLmodel
