[project]
name = "appliedmachinelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "flask>=3.1.3",
    "mlflow>=2.9",
    "numpy>=2.4.2",
    "pandas<3",
    "protobuf<5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
